--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
           ><span class="header__logo-text header__logo-text--accent">Web</span
           ><span class="header__logo-text header__logo-text--black"
             >Studio</span
-          ></a>
-        <svg class="header__burger" width="40" height="40">
-          <use href="./images/icons.svg#icon-menu"></use>
-        </svg>
+          ></a
+        >
         <nav class="header__nav">
           <ul class="header__pages">
             <li class="header__link header__link--select">
@@ -64,6 +62,41 @@
               +38 096 111 11 11
             </a>
           </li>
+        </ul>
+        <button class="menu__button menu__open js-open-menu" type="button">
+          <svg width="30" height="30" aria-label="перемикач на меню">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="menu js-menu-container">
+        <button class="menu__button menu__close js-close-menu" type="button">
+          <svg width="30" height="30" aria-label="кнопка закриття меню">
+            <use href="./images/icons.svg#icon-dagger"></use>
+          </svg>
+        </button>
+        <ul class="menu__list">
+          <li class="menu__page menu__page--select"><a href="">Студія</a></li>
+          <li class="menu__page"><a href="./portfolio.html">Портфоліо</a></li>
+          <li class="menu__page"><a href="">Контакти</a></li>
+        </ul>
+        <ul class="menu__commun">
+          <li>
+            <a href="tel:+380961111111" class="menu__tel">
+              +38 096 111 11 11
+            </a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="menu__mail">
+              info@devstudio.com
+            </a>
+          </li>
+        </ul>
+        <ul class="menu__social">
+          <li class="menu__link"><a href="">Instagram</a></li>
+          <li class="menu__link"><a href="">Twitter</a></li>
+          <li class="menu__link"><a href="">Facebook</a></li>
+          <li class="menu__link"><a href="">LinkedIn</a></li>
         </ul>
       </div>
     </header>
@@ -251,7 +284,8 @@
         <h2 class="team__title">Наша команда</h2>
         <ul class="team__cards">
           <li class="team__item">
-            <img class="team__img"
+            <img
+              class="team__img"
               src="./images/img-1.jpg"
               alt="фото Ігора Дем'яненко"
               width="270"
@@ -287,7 +321,8 @@
             </ul>
           </li>
           <li class="team__item">
-            <img class="team__img"
+            <img
+              class="team__img"
               src="./images/img-2.jpg"
               alt="фото Ольги Рєпіної"
               width="270"
@@ -323,7 +358,8 @@
             </ul>
           </li>
           <li class="team__item">
-            <img class="team__img"
+            <img
+              class="team__img"
               src="./images/img-3.jpg"
               alt="фото Миколи Тарасова"
               width="270"
@@ -359,7 +395,8 @@
             </ul>
           </li>
           <li class="team__item">
-            <img class="team__img"
+            <img
+              class="team__img"
               src="./images/img-4.jpg"
               alt="фото Михайла Єрмакова"
               width="270"
@@ -433,7 +470,7 @@
           </li>
           <li class="clients__item">
             <a class="clients__link" href=""
-              ><svg  width="106" height="60">
+              ><svg width="106" height="60">
                 <use href="./images/icons.svg#icon-company-6"></use></svg
             ></a>
           </li>
